Add Stock_Source.xml metadata file for stock management